whitespace, STS warnings, cleanup