@@ -612,7 +612,7 @@ public class GroovyPageParser implements Tokens {
         // de-dupe constants
         Integer constantNumber = constantsToNumbers.get(text);
         if (constantNumber == null) {
-            constantNumber = new Integer(constantCount++);
+            constantNumber = Integer.valueOf(constantCount++);
             constantsToNumbers.put(text, constantNumber);
             htmlParts.add(text);
         }
@@ -1125,7 +1125,7 @@ public class GroovyPageParser implements Tokens {
         }
         currentlyBufferingWhitespace = false;
     }
-    
+
     private static final int PARSING_NORMAL=0;
     private static final int PARSING_EXPRESSION=1;
     private static final int PARSING_QUOTEDVALUE=2;
@@ -1151,50 +1151,50 @@ public class GroovyPageParser implements Tokens {
                 throw new GrailsTagException("Attribute value must be quoted.", pageName, getCurrentOutputLineNumber());
             }
             char quoteChar = ch;
-            
+
             int parenthesisLevel=0;
             int endPos = startPos;
             int endQuotepos = -1;
             char previousChar = 0;
             int valueCharIndex=0;
             int parsingState = PARSING_NORMAL;
-            char currentQuoteChar = 0;            
+            char currentQuoteChar = 0;
             while(endPos < attrTokens.length() && endQuotepos==-1) {
                 ch = attrTokens.charAt(endPos++);
                 switch(ch) {
-	                case '{':
-	                	if(previousChar=='$' || parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel++;
-	                		parsingState=PARSING_EXPRESSION;
-	                	}
-	                	break;
-	                case '[':
-	                	if(valueCharIndex==0 || parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel++;
-	                		parsingState=PARSING_EXPRESSION;
-	                	}
-	                	break;
-	                case '}':
-	                case ']': 
-	                	if(parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel--;
-	                		if(parenthesisLevel==0) {
-	                			parsingState=PARSING_NORMAL;
-	                		}
-	                	}
-	                	break;
-	                default:
-	                	if(previousChar != '\\') {
-		                	if(parsingState==PARSING_NORMAL && ch==quoteChar && parenthesisLevel == 0) {
-		                		endQuotepos = endPos-1;
-		                	} else if(parsingState==PARSING_EXPRESSION && (ch=='"' || ch=='\'')) {
-	                			currentQuoteChar = ch;
-	                			parsingState = PARSING_QUOTEDVALUE;
-	                		} else if(parsingState==PARSING_QUOTEDVALUE && ch==currentQuoteChar) {
-	                			parsingState = PARSING_EXPRESSION;
-	                		}
-	                	}
-	                	break;
+                    case '{':
+                        if (previousChar=='$' || parsingState==PARSING_EXPRESSION) {
+                            parenthesisLevel++;
+                            parsingState=PARSING_EXPRESSION;
+                        }
+                        break;
+                    case '[':
+                        if (valueCharIndex==0 || parsingState==PARSING_EXPRESSION) {
+                            parenthesisLevel++;
+                            parsingState=PARSING_EXPRESSION;
+                        }
+                        break;
+                    case '}':
+                    case ']':
+                        if (parsingState==PARSING_EXPRESSION) {
+                            parenthesisLevel--;
+                            if (parenthesisLevel==0) {
+                                parsingState=PARSING_NORMAL;
+                            }
+                        }
+                        break;
+                    default:
+                        if (previousChar != '\\') {
+                            if (parsingState==PARSING_NORMAL && ch==quoteChar && parenthesisLevel == 0) {
+                                endQuotepos = endPos-1;
+                            } else if (parsingState==PARSING_EXPRESSION && (ch=='"' || ch=='\'')) {
+                                currentQuoteChar = ch;
+                                parsingState = PARSING_QUOTEDVALUE;
+                            } else if (parsingState==PARSING_QUOTEDVALUE && ch==currentQuoteChar) {
+                                parsingState = PARSING_EXPRESSION;
+                            }
+                        }
+                        break;
                 }
                 previousChar=ch;
                 valueCharIndex++;
